[gd_scene load_steps=2 format=3 uid="uid://flpmhklagsdg"]

[ext_resource type="Script" path="res://scripts/uniforms_ctl.gd" id="1_1hhrb"]

[node name="cc" type="CenterContainer"]
offset_right = 182.0
offset_bottom = 100.0
script = ExtResource("1_1hhrb")

[node name="vbox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
alignment = 1

[node name="label" type="Label" parent="vbox"]
layout_mode = 2
horizontal_alignment = 1

[node name="option" type="OptionButton" parent="vbox"]
layout_mode = 2
item_count = 7
allow_reselect = true
popup/item_0/text = "None"
popup/item_0/id = 0
popup/item_1/text = "Simple texture"
popup/item_1/id = 1
popup/item_2/text = "Animated texture"
popup/item_2/id = 2
popup/item_3/text = "Gradient"
popup/item_3/id = 3
popup/item_4/text = "Noise"
popup/item_4/id = 4
popup/item_5/text = "Normal map"
popup/item_5/id = 5
popup/item_6/text = "Screen"
popup/item_6/id = 6

[connection signal="item_selected" from="vbox/option" to="." method="_on_option_item_selected"]
